<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/general_survey"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textSize="50sp"
        android:paddingBottom="30dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/username_floating_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:text="Username"
         android:textStyle="italic"/>

    <EditText
        android:id="@+id/username_edit"
        android:layout_width="400dp"
        android:layout_height="match_parent"
        android:inputType="text"
        android:hint="@string/username_hint"/>

    <TextView
        android:id="@+id/pwd_floating_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:text="Password"
         android:textStyle="italic"/>

    <EditText
        android:id="@+id/pwd_edit"
        android:layout_width="400dp"
        android:layout_height="match_parent"
        android:inputType="textPassword"
        android:hint="@string/password_hint"/>

    <TextView
        android:id="@+id/pwdConfirm_floating_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:text="Confirm Password"
         android:textStyle="italic"/>

    <EditText
        android:id="@+id/pwdConfirm_edit"
        android:layout_width="400dp"
        android:layout_height="match_parent"
        android:inputType="textPassword"
        android:hint="@string/password_hint"/>

    <TextView
        android:id="@+id/first_name_floating_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:text="@string/firstName"
         android:textStyle="italic"/>

    <EditText
        android:id="@+id/first_name_edit"
        android:layout_width="400dp"
        android:layout_height="match_parent"
        android:inputType="text"
        android:hint="@string/first_hint"/>

    <TextView
        android:id="@+id/gender_name_floating_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:text="@string/gender"
        android:paddingTop="0dp"
         android:textStyle="italic"/>

    <Spinner
        android:id="@+id/gender_spinner"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:entries="@array/gender_answers"
        android:paddingBottom="0dp"
        android:prompt="@string/spinner_prompt">
    </Spinner>

    <TextView
        android:id="@+id/age_floating_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:text="@string/age"
         android:textStyle="italic"/>

    <EditText
        android:id="@+id/age_edit"
        android:layout_width="400dp"
        android:layout_height="match_parent"
        android:inputType="phone"
        android:hint="@string/age_hint"/>

    <TextView
        android:id="@+id/phone_number_floating_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:text="@string/number"
        android:paddingTop="0dp"
         android:textStyle="italic"/>

    <EditText
        android:id="@+id/phone_number_edit"
        android:layout_width="400dp"
        android:layout_height="match_parent"
        android:inputType="phone"
        android:hint="@string/phone_hint"/>

    <TextView
        android:id="@+id/email_floating_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:text="@string/email"
        android:paddingTop="0dp"
         android:textStyle="italic"/>

    <EditText
        android:id="@+id/email_edit"
        android:layout_width="400dp"
        android:layout_height="match_parent"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"/>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:visibility="visible"
        android:text="@string/submit"
        android:layout_gravity="center"/>

</LinearLayout>