<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".Utils.Settings">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_weight=".5"/>

    <Button
        android:id="@+id/update_personal_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/update_personal"
        android:textSize="24sp"
        android:visibility="visible"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/update_general_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/update_general"
        android:textSize="24sp"
        android:visibility="visible"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/logout_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/logout"
        android:textSize="24sp"
        android:visibility="visible"
        android:textAlignment="center"/>
</LinearLayout>