<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >
<LinearLayout

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textSize="32sp"
        android:text="Update General Info"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:text="Username: "/>

    <EditText
        android:id="@+id/update_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:text="Password: "/>

    <EditText
        android:id="@+id/update_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:text="Confirm Password:"/>

    <EditText
        android:id="@+id/update_pwd_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:text="First Name: "/>

    <EditText
        android:id="@+id/update_firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"/>

    <TextView
        android:id="@+id/gender_name_floating_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:text="@string/gender"
        android:paddingTop="35dp"
        style="@style/InputLabel"/>

    <Spinner
        android:id="@+id/update_gender"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:entries="@array/gender_answers"
        android:paddingBottom="35dp"
        android:prompt="@string/spinner_prompt">
    </Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:text="Age: "/>

    <EditText
        android:id="@+id/update_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:inputType="number"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:text="Phone Number: " />

    <EditText
        android:id="@+id/update_phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:inputType="phone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:text="Email:"/>

    <EditText
        android:id="@+id/update_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"/>

    <Button
        android:id="@+id/update_submit_button"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:visibility="visible"
        android:text="@string/submit"
        android:layout_gravity="center"/>

</LinearLayout>
</ScrollView>